--- a/templates/purchases/cart.html
+++ b/templates/purchases/cart.html
@@ -9,6 +9,7 @@
       <div class="w-full lg:w-3/4">
         {% include 'purchases/cart-table.html' %}
       </div>
+        {% if importe_total_carro %}
       <div class="w-full lg:w-1/4 flex flex-col justify-end">
         <div class="bg-gray-200 dark:bg-gray-800 p-4 rounded-lg">
           <div class="flex justify-between font-bold text-gray-900 dark:text-white mb-2">
@@ -18,15 +19,23 @@
             Limpiar Carrito
           </a>
 {#            Stripe#}
-{#          <a href="{% url 'purchases:buy_cart' %}" style="background-color: #4a5568; color: #fff; font-weight: bold; padding: 0.5rem 1rem; border-radius: 0.25rem; display: block; text-align: center; margin-top: 1rem;">#}
-{#            Comprar#}
+            <form method="POST" action="{% url 'pedidos_stripe:buy_cart' %}">
+                {% csrf_token %}
+          <button type="submit" style="background-color: #4a5568; color: #fff; font-weight: bold; padding: 0.5rem 1rem; border-radius: 0.25rem; display: block; text-align: center; margin-top: 1rem;">
+            Comprar Stripe
 
+          </button>
+                </form>
 {#            Zelle#}
-                      <a href="{% url 'purchases:create_solicitud_zelle' %}" style="background-color: #4a5568; color: #fff; font-weight: bold; padding: 0.5rem 1rem; border-radius: 0.25rem; display: block; text-align: center; margin-top: 1rem;">
-            Comprar
-          </a>
+             <form method="POST" action="{% url  'purchases:create_solicitud_zelle' %}">
+                  {% csrf_token %}
+                      <button type="submit" style="background-color: #4a5568; color: #fff; font-weight: bold; padding: 0.5rem 1rem; border-radius: 0.25rem; display: block; text-align: center; margin-top: 1rem;">
+            Comprar Zelle
+          </button>
+             </form>
         </div>
       </div>
+        {% endif %}
     </div>
   </div>
 </section>
