--- a/templates/base/css.html
+++ b/templates/base/css.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{% static 'css/output.css' %}" />
 
 
-{# COMMENT: vendor_css_files comes from micro-ecommerce.context_processors.vendor_files #}
+{# COMMENT: vendor_css_files comes from micro_ecommerce.context_processors.vendor_files #}
 {% for css_file in vendor_css_files %}
 <link rel="stylesheet" href="{% static css_file %}">
 {% endfor %}
