--- a/templates/products/manager.html
+++ b/templates/products/manager.html
@@ -2,6 +2,15 @@
 
 
 {% block content %}
+{% if form.errors %}
+    <ul>
+    {% for field in form %}
+        {% for error in field.errors %}
+            <li>{{ field.label }}: {{ error }}</li>
+        {% endfor %}
+    {% endfor %}
+    </ul>
+{% endif %}
 
 <form class='space-y-5' method="POST" action="" enctype="multipart/form-data">
     {% csrf_token %}
@@ -59,6 +68,8 @@
         const newForm = cloneBlankForm()
         attachmentContainer.appendChild(newForm)
     }
+
+
 
 </script>
 
