--- a/templates/usuario/login.html
+++ b/templates/usuario/login.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+
+
 <div class="flex flex-col items-center justify-center px-6 mx-auto md:h-screen lg:py-0">
     <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
         <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
@@ -18,13 +21,29 @@
                 <button type="submit" class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     Iniciar sesión
                 </button>
-                {% if messages %}
-                {% for message in messages %}
-                <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
-                    {{ message }}
-                </div>
-                {% endfor %}
-                {% endif %}
+              {% if messages %}
+<div class="space-y-4 mt-4">
+    {% for message in messages %}
+    <div id="message-{{ forloop.counter }}" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded-md shadow-md relative" role="alert">
+        <strong class="font-bold">¡Atención!</strong>
+        <span class="block sm:inline">{{ message }}</span>
+        <span class="absolute top-0 bottom-0 right-0 px-4 py-3 cursor-pointer" onclick="closeMessage('message-{{ forloop.counter }}')">
+            <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                <title>Cerrar</title>
+                <path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z" />
+            </svg>
+        </span>
+    </div>
+    {% endfor %}
+</div>
+
+<script>
+    function closeMessage(id) {
+        var message = document.getElementById(id);
+        message.style.display = 'none';
+    }
+</script>
+{% endif %}
                 <p class="text-sm font-light text-gray-500 dark:text-gray-400">
                     ¿No tienes una cuenta? <a href="{% url 'usuario:create' %}" class="font-medium text-blue-600 hover:underline dark:text-blue-500">Regístrate</a>
                 </p>
@@ -33,3 +52,5 @@
     </div>
 </div>
 {% endblock %}
+
+
