--- a/templates/base/js.html
+++ b/templates/base/js.html
@@ -1,7 +1,8 @@
 {% load static %}
 
+<script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 <script src="{% static 'js/cart.js' %}"></script>
 {# COMMENT:  vendor_js_files comes from micro_ecommerce.context_processors.vendor_files #}
-{% for js_file in vendor_js_files %}
-    <script src="{% static js_file %}" preload></script>
-{% endfor %}
+{#{% for js_file in vendor_js_files %}#}
+{#    <script src="{% static js_file %}" preload></script>#}
+{#{% endfor %}#}
