mis productos table

--- a/templates/products/manager.html
+++ b/templates/products/manager.html
@@ -29,9 +29,11 @@
         </div>
     </div>
 
-    <button class="btn-submit mt-2" id="add-attachment-btn">Add attachment</button>
+{#<a href="{% url 'products:delete_product' form.instance.handle %}" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" >Eliminar</a>#}
 
-    <button type="submit" class="btn-submit mt-2">Save</button>
+    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" id="add-attachment-btn">Add attachment</button>
+
+<button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Save</button>
 </form>
 
 
