--- a/templates/purchases/cart.html
+++ b/templates/purchases/cart.html
@@ -15,23 +15,24 @@
           <div class="flex justify-between font-bold text-gray-900 dark:text-white mb-2">
             Total: <span>${{ importe_total_carro }}</span>
           </div>
-          <a href="{% url 'carro:limpiar' %}" style="background-color: #4a5568; color: #fff; font-weight: bold; padding: 0.5rem 1rem; border-radius: 0.25rem; display: block; text-align: center;">
-            Limpiar Carrito
-          </a>
+
+<a href="{% url 'carro:limpiar' %}" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+  Limpiar Carrito
+</a>
 {#            Stripe#}
             <form method="POST" action="{% url 'pedidos_stripe:buy_cart' %}">
                 {% csrf_token %}
-          <button type="submit" style="background-color: #4a5568; color: #fff; font-weight: bold; padding: 0.5rem 1rem; border-radius: 0.25rem; display: block; text-align: center; margin-top: 1rem;">
-            Comprar Stripe
 
-          </button>
+<button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+  Comprar Stripe
+</button>
                 </form>
 {#            Zelle#}
              <form method="POST" action="{% url  'purchases:create_solicitud_zelle' %}">
                   {% csrf_token %}
-                      <button type="submit" style="background-color: #4a5568; color: #fff; font-weight: bold; padding: 0.5rem 1rem; border-radius: 0.25rem; display: block; text-align: center; margin-top: 1rem;">
-            Comprar Zelle
-          </button>
+                      <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+  Comprar Zelle
+</button>
              </form>
         </div>
       </div>
@@ -39,3 +40,6 @@
     </div>
   </div>
 </section>
+
+
+
