Boton hambur funcional

--- a/templates/purchases/cart-table.html
+++ b/templates/purchases/cart-table.html
@@ -1,6 +1,5 @@
-<div class="w-full overflow-x-auto">
-  <table class="w-full border-collapse rounded-lg overflow-hidden">
-    <thead>
+
+  <table class="w-4/5 border-collapse rounded-lg overflow-hidden"> 
       <tr class="bg-gray-200 text-gray-700">
         <th class="px-4 py-3 text-left">Producto</th>
         <th class="px-4 py-3 text-left">Cantidad</th>
@@ -39,4 +38,3 @@
       {% endif %}
     </tbody>
   </table>
-</div>
