--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -3,27 +3,27 @@
     <a href="#" class="flex items-center">
       <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Micro eCommerce</span>
     </a>
-    <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+    <button id="navbar-toggle" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
       <span class="sr-only">Open main menu</span>
       <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
     </button>
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-      <ul class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700 ">
-{#        <li>#}
+      <ul class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        {#        <li>#}
 {##}
 {#      <a href="{% url 'home' %}" class="block py-2 pl-3 pr-4  md:bg-transparent text-gray-700 md:p-0 dark:text-white {% if request.path == '/' %} md:text-blue-700 {% endif %}">Home</a>#}
 {##}
 {#        </li>#}
-        <li class="relative">
-          <a href="#" class="block py-2 pl-3 pr-4  bg-blue-700 rounded md:bg-transparent text-gray-700  md:p-0 dark:text-white"  onclick="toggleCart()">Carro</a>
-          <div id="cart-window" class="fixed inset-0 flex items-center justify-center z-10 hidden">
-            <div class="bg-white shadow-lg rounded-lg p-6 w-full max-w-md">
-              {% include 'purchases/cart.html' %}
-              <button class="absolute top-2 right-2 text-gray-500 hover:text-gray-700" onclick="toggleCart()">
-                <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-                </svg>
-              </button>
+<li class="relative">
+  <a href="#" class="block py-2 pl-3 pr-4 bg-blue-700 rounded md:bg-transparent text-gray-700 md:p-0 dark:text-white" onclick="toggleCart()">Carro</a>
+  <div id="cart-window" class="fixed inset-0 flex items-center justify-center z-10 hidden">
+    <div class="bg-white shadow-lg rounded-lg p-6 w-full max-w">
+      {% include 'purchases/cart.html' %}
+      <button class="absolute top-2 right-2 text-gray-500 hover:text-gray-700" onclick="toggleCart()">
+        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+        </svg>
+      </button>
             </div>
           </div>
         </li>
@@ -102,14 +102,58 @@
 </nav>
 
 <style>
-    .relative:hover .absolute {
-  display: block;
-}
+  .relative:hover .absolute {
+    display: block;
+  }
 
-.relative .absolute {
-  display: none;
-}
+  .relative .absolute {
+    display: none;
+  }
 </style>
 
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const navbarToggle = document.getElementById('navbar-toggle');
+    const navbarMenu = document.getElementById('navbar-default');
 
-<script> document.addEventListener('DOMContentLoaded', () => { const productsLink = document.querySelector('a[href="{% url 'products:list' %}"]'); const productDropdown = productsLink.nextElementSibling; let isDropdownShown = false; productsLink.addEventListener('mouseenter', () => { isDropdownShown = true; productDropdown.classList.remove('hidden'); }); productsLink.addEventListener('mouseleave', () => { isDropdownShown = false; setTimeout(() => { if (!isDropdownShown) { productDropdown.classList.add('hidden'); } }, 100); // Delay for 100ms to prevent immediate hide }); productDropdown.addEventListener('mouseenter', () => { isDropdownShown = true; }); productDropdown.addEventListener('mouseleave', () => { isDropdownShown = false; setTimeout(() => { if (!isDropdownShown) { productDropdown.classList.add('hidden'); } }, 100); // Delay for 100ms to prevent immediate hide }); }); </script> <script> function toggleCart() { var cartWindow = document.getElementById('cart-window'); cartWindow.classList.toggle('hidden'); } </script>
+    navbarToggle.addEventListener('click', () => {
+      navbarMenu.classList.toggle('hidden');
+    });
+
+    const productsLink = document.querySelector('a[href="{% url 'products:list' %}"]');
+    const productDropdown = productsLink.nextElementSibling;
+    let isDropdownShown = false;
+
+    productsLink.addEventListener('mouseenter', () => {
+      isDropdownShown = true;
+      productDropdown.classList.remove('hidden');
+    });
+
+    productsLink.addEventListener('mouseleave', () => {
+      isDropdownShown = false;
+      setTimeout(() => {
+        if (!isDropdownShown) {
+          productDropdown.classList.add('hidden');
+        }
+      }, 100);
+    });
+
+    productDropdown.addEventListener('mouseenter', () => {
+      isDropdownShown = true;
+    });
+
+    productDropdown.addEventListener('mouseleave', () => {
+      isDropdownShown = false;
+      setTimeout(() => {
+        if (!isDropdownShown) {
+          productDropdown.classList.add('hidden');
+        }
+      }, 100);
+    });
+  });
+
+  function toggleCart() {
+    var cartWindow = document.getElementById('cart-window');
+    cartWindow.classList.toggle('hidden');
+  }
+</script>
