--- a/templates/purchases/cart-table.html
+++ b/templates/purchases/cart-table.html
@@ -16,10 +16,10 @@
         <td class="px-4 py-3 flex items-center">
           <a href="{% url 'carro:restar' value.product_id %}" class="mr-2 text-gray-500 hover:text-gray-700">-</a>
           {{ value.cantidad }}
-          <a href="{% url 'carro:agregar' value.product_id %}" class="ml-2 text-gray-500 hover:text-gray-700">+</a>
+          <a href="{% url 'carro:agregar_carro' value.product_id %}" class="ml-2 text-gray-500 hover:text-gray-700">+</a>
         </td>
         <td class="px-4 py-3">${{ value.price }}</td>
-        <td class="px-4 py-3">${{ value.subtotal }}</td>
+        <td class="px-4 py-3">${{ value.subtotal|floatformat:2 }}</td>
         <td class="px-4 py-3">
           <a href="{% url 'carro:eliminar' value.product_id %}" class="text-gray-500 hover:text-gray-700">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
