--- a/templates/purchases/cart.html
+++ b/templates/purchases/cart.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <section class="bg-white dark:bg-gray-900">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
     <div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16">
@@ -15,7 +18,7 @@
           <div class="bg-gray-200 dark:bg-gray-800 p-4 rounded-lg">
               <!-- Total del carrito -->
               <div class="flex justify-between font-bold text-gray-900 dark:text-white mb-4">
-                  Total: <span>${{ importe_total_carro }}</span>
+                  Total: <span>${{ importe_total_carro|floatformat:2 }}</span>
               </div>
   
               <!-- Botón para limpiar el carrito -->
@@ -54,5 +57,7 @@
   </div>
 </section>
 
+
+{% endblock  %}
 
 
